conferences/qcon/scenario5/trades-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trades
  labels:
    app: trades
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trades
  template:
    metadata:
      labels:
        app: trades
    spec:
      containers:
        - name: trades
          image: jpgough/trades-rest-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
